<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/promo_btn"
        android:contentDescription="@string/promo_btn_desc"
        android:icon="@drawable/savings"
        android:title="@string/promo_btn"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/search_btn"
        android:contentDescription="@string/search_btn_desc"
        android:icon="@drawable/mic"
        android:title="@string/search_btn"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigate_btn"
        android:icon="@drawable/navigate"
        android:title="@string/navigation_btn"
        app:showAsAction="ifRoom|withText" />
</menu>